# mynotesapp

./: Cargo.toml
migrations/2019-08-24-080052_create_notes/: up.sql
src/: lib.rs  models.rs  schema.rs
